fix sidenav scrolling cutoff

--- a/bbf_organizr_on_top_of_burry.css
+++ b/bbf_organizr_on_top_of_burry.css
@@ -118,10 +118,11 @@ img.dark-logo {
 	background: rgba(0,0,0,.0);
 	background-color: rgba(0,0,0,.0);
 	margin-top: 40px;
+	padding-bottom: 40px;
 }
 
 .slimScrollDiv {
-    background-color: rgba(0,0,0,0.2);
+	background-color: rgba(0,0,0,0.2);
 }
 
 #side-menu li a {
